FIx(Contact-me): Fix h5 style anda overflow in about me, also update readme.md

--- a/css/components/about-me.css
+++ b/css/components/about-me.css
@@ -9,13 +9,17 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  overflow: hidden;
 }
 .about-us-container h4 {
   font-size: var(--h4);
   color: var(--color-primary-text);
   margin-bottom: var(--size-32);
   text-align: center;
+}
+
+.description {
+  position: relative;
+  overflow: hidden;
 }
 
 .formal-pict {
