--- a/css/components/contact-me.css
+++ b/css/components/contact-me.css
@@ -17,7 +17,7 @@
   font-size: var(--h4);
   line-height: 1.4;
   color: var(--color-secondary);
-  width: 80%;
+  width: 90%;
 }
 
 /* Form Container */
